[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scene/Lvl1.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scene/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Script/UI.gd" type="Script" id=3]

[node name="Game" type="Node2D"]

[node name="Lvl1" parent="." instance=ExtResource( 1 )]

[node name="Player" parent="Lvl1" instance=ExtResource( 2 )]
position = Vector2( 51, 553 )

[node name="UI" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 3 )

[node name="action_enter" type="TextEdit" parent="UI"]
visible = false
margin_left = 45.0
margin_top = 357.0
margin_right = 124.0
margin_bottom = 384.0
text = " E to enter"

[node name="action_buy" type="TextEdit" parent="UI"]
visible = false
margin_left = 45.0
margin_top = 357.0
margin_right = 124.0
margin_bottom = 384.0
text = " E to buy"

[connection signal="close_action" from="Lvl1" to="UI" method="_on_Lvl1_close_action"]
[connection signal="enter_garage" from="Lvl1" to="UI" method="_on_Lvl1_enter_garage"]
[connection signal="enter_hall" from="Lvl1" to="UI" method="_on_Lvl1_enter_hall"]
[connection signal="money_update" from="Lvl1/Player" to="UI" method="_on_Player_money_update"]
